--- a/extrinsics.html
+++ b/extrinsics.html
@@ -40,17 +40,12 @@
   </header>
 
   <main class="extrinsics-page pagewidth">
+    <div class="content"></div>
   </main>
 
-  <!-- <footer>
-    <nav>
-      <a href="new-multisig.html">New Multisig</a>
-      <a href="multisig-accounts.html">Multisig Accounts</a>
-      <a href="accounts.html">Accounts</a>
-      <a href="address-book.html">Address Book</a>
-      <a class="selected" href="extrinsics.html">Extrinsics</a>
-    </nav>
-  </footer> -->
+  <footer>
+    <span>Secure Sign | Tenet Labs</span>
+  </footer>
 
   <script src="script.js"></script>
 </body>
