--- a/accounts.html
+++ b/accounts.html
@@ -40,187 +40,183 @@
   </header>
 
   <main class="accounts-page pagewidth">
-    <div class="accounts-account-list-container scrollable">
-      <div class="account-list-item">
-        <p class="account-name">Demo account</p>
-        <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
-        <div>
-          <p>Free: <span>0.0000 C</span></p>
-          <p>Staked: <span>0.0000 C</span></p>
+    <div class="content">
+      <div class="accounts-account-list-container scrollable">
+        <div class="account-list-item">
+          <p class="account-name">Demo account</p>
+          <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
+          <div>
+            <p>Free: <span>0.0000 C</span></p>
+            <p>Staked: <span>0.0000 C</span></p>
+          </div>
+          <div>
+            <button>Copy</button>
+            <button>Send</button>
+          </div>
         </div>
-        <div>
-          <button>Copy</button>
-          <button>Send</button>
+        <div class="account-list-item">
+          <p class="account-name">Demo account</p>
+          <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
+          <div>
+            <p>Free: <span>0.0000 C</span></p>
+            <p>Staked: <span>0.0000 C</span></p>
+          </div>
+          <div>
+            <button>Copy</button>
+            <button>Send</button>
+          </div>
         </div>
-      </div>
-      <div class="account-list-item">
-        <p class="account-name">Demo account</p>
-        <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
-        <div>
-          <p>Free: <span>0.0000 C</span></p>
-          <p>Staked: <span>0.0000 C</span></p>
+        <div class="account-list-item">
+          <p class="account-name">Demo account</p>
+          <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
+          <div>
+            <p>Free: <span>0.0000 C</span></p>
+            <p>Staked: <span>0.0000 C</span></p>
+          </div>
+          <div>
+            <button>Copy</button>
+            <button>Send</button>
+          </div>
         </div>
-        <div>
-          <button>Copy</button>
-          <button>Send</button>
+        <div class="account-list-item">
+          <p class="account-name">Demo account</p>
+          <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
+          <div>
+            <p>Free: <span>0.0000 C</span></p>
+            <p>Staked: <span>0.0000 C</span></p>
+          </div>
+          <div>
+            <button>Copy</button>
+            <button>Send</button>
+          </div>
         </div>
-      </div>
-      <div class="account-list-item">
-        <p class="account-name">Demo account</p>
-        <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
-        <div>
-          <p>Free: <span>0.0000 C</span></p>
-          <p>Staked: <span>0.0000 C</span></p>
+        <div class="account-list-item">
+          <p class="account-name">Demo account</p>
+          <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
+          <div>
+            <p>Free: <span>0.0000 C</span></p>
+            <p>Staked: <span>0.0000 C</span></p>
+          </div>
+          <div>
+            <button>Copy</button>
+            <button>Send</button>
+          </div>
         </div>
-        <div>
-          <button>Copy</button>
-          <button>Send</button>
+        <div class="account-list-item">
+          <p class="account-name">Demo account</p>
+          <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
+          <div>
+            <p>Free: <span>0.0000 C</span></p>
+            <p>Staked: <span>0.0000 C</span></p>
+          </div>
+          <div>
+            <button>Copy</button>
+            <button>Send</button>
+          </div>
         </div>
-      </div>
-      <div class="account-list-item">
-        <p class="account-name">Demo account</p>
-        <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
-        <div>
-          <p>Free: <span>0.0000 C</span></p>
-          <p>Staked: <span>0.0000 C</span></p>
+        <div class="account-list-item">
+          <p class="account-name">Demo account</p>
+          <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
+          <div>
+            <p>Free: <span>0.0000 C</span></p>
+            <p>Staked: <span>0.0000 C</span></p>
+          </div>
+          <div>
+            <button>Copy</button>
+            <button>Send</button>
+          </div>
         </div>
-        <div>
-          <button>Copy</button>
-          <button>Send</button>
+        <div class="account-list-item">
+          <p class="account-name">Demo account</p>
+          <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
+          <div>
+            <p>Free: <span>0.0000 C</span></p>
+            <p>Staked: <span>0.0000 C</span></p>
+          </div>
+          <div>
+            <button>Copy</button>
+            <button>Send</button>
+          </div>
         </div>
-      </div>
-      <div class="account-list-item">
-        <p class="account-name">Demo account</p>
-        <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
-        <div>
-          <p>Free: <span>0.0000 C</span></p>
-          <p>Staked: <span>0.0000 C</span></p>
+        <div class="account-list-item">
+          <p class="account-name">Demo account</p>
+          <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
+          <div>
+            <p>Free: <span>0.0000 C</span></p>
+            <p>Staked: <span>0.0000 C</span></p>
+          </div>
+          <div>
+            <button>Copy</button>
+            <button>Send</button>
+          </div>
         </div>
-        <div>
-          <button>Copy</button>
-          <button>Send</button>
+        <div class="account-list-item">
+          <p class="account-name">Demo account</p>
+          <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
+          <div>
+            <p>Free: <span>0.0000 C</span></p>
+            <p>Staked: <span>0.0000 C</span></p>
+          </div>
+          <div>
+            <button>Copy</button>
+            <button>Send</button>
+          </div>
         </div>
-      </div>
-      <div class="account-list-item">
-        <p class="account-name">Demo account</p>
-        <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
-        <div>
-          <p>Free: <span>0.0000 C</span></p>
-          <p>Staked: <span>0.0000 C</span></p>
+        <div class="account-list-item">
+          <p class="account-name">Demo account</p>
+          <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
+          <div>
+            <p>Free: <span>0.0000 C</span></p>
+            <p>Staked: <span>0.0000 C</span></p>
+          </div>
+          <div>
+            <button>Copy</button>
+            <button>Send</button>
+          </div>
         </div>
-        <div>
-          <button>Copy</button>
-          <button>Send</button>
+        <div class="account-list-item">
+          <p class="account-name">Demo account</p>
+          <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
+          <div>
+            <p>Free: <span>0.0000 C</span></p>
+            <p>Staked: <span>0.0000 C</span></p>
+          </div>
+          <div>
+            <button>Copy</button>
+            <button>Send</button>
+          </div>
         </div>
-      </div>
-      <div class="account-list-item">
-        <p class="account-name">Demo account</p>
-        <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
-        <div>
-          <p>Free: <span>0.0000 C</span></p>
-          <p>Staked: <span>0.0000 C</span></p>
+        <div class="account-list-item">
+          <p class="account-name">Demo account</p>
+          <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
+          <div>
+            <p>Free: <span>0.0000 C</span></p>
+            <p>Staked: <span>0.0000 C</span></p>
+          </div>
+          <div>
+            <button>Copy</button>
+            <button>Send</button>
+          </div>
         </div>
-        <div>
-          <button>Copy</button>
-          <button>Send</button>
-        </div>
-      </div>
-      <div class="account-list-item">
-        <p class="account-name">Demo account</p>
-        <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
-        <div>
-          <p>Free: <span>0.0000 C</span></p>
-          <p>Staked: <span>0.0000 C</span></p>
-        </div>
-        <div>
-          <button>Copy</button>
-          <button>Send</button>
-        </div>
-      </div>
-      <div class="account-list-item">
-        <p class="account-name">Demo account</p>
-        <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
-        <div>
-          <p>Free: <span>0.0000 C</span></p>
-          <p>Staked: <span>0.0000 C</span></p>
-        </div>
-        <div>
-          <button>Copy</button>
-          <button>Send</button>
-        </div>
-      </div>
-      <div class="account-list-item">
-        <p class="account-name">Demo account</p>
-        <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
-        <div>
-          <p>Free: <span>0.0000 C</span></p>
-          <p>Staked: <span>0.0000 C</span></p>
-        </div>
-        <div>
-          <button>Copy</button>
-          <button>Send</button>
-        </div>
-      </div>
-      <div class="account-list-item">
-        <p class="account-name">Demo account</p>
-        <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
-        <div>
-          <p>Free: <span>0.0000 C</span></p>
-          <p>Staked: <span>0.0000 C</span></p>
-        </div>
-        <div>
-          <button>Copy</button>
-          <button>Send</button>
-        </div>
-      </div>
-      <div class="account-list-item">
-        <p class="account-name">Demo account</p>
-        <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
-        <div>
-          <p>Free: <span>0.0000 C</span></p>
-          <p>Staked: <span>0.0000 C</span></p>
-        </div>
-        <div>
-          <button>Copy</button>
-          <button>Send</button>
-        </div>
-      </div>
-      <div class="account-list-item">
-        <p class="account-name">Demo account</p>
-        <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
-        <div>
-          <p>Free: <span>0.0000 C</span></p>
-          <p>Staked: <span>0.0000 C</span></p>
-        </div>
-        <div>
-          <button>Copy</button>
-          <button>Send</button>
-        </div>
-      </div>
-      <div class="account-list-item">
-        <p class="account-name">Demo account</p>
-        <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
-        <div>
-          <p>Free: <span>0.0000 C</span></p>
-          <p>Staked: <span>0.0000 C</span></p>
-        </div>
-        <div>
-          <button>Copy</button>
-          <button>Send</button>
+        <div class="account-list-item">
+          <p class="account-name">Demo account</p>
+          <p class="account-address">5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP</p>
+          <div>
+            <p>Free: <span>0.0000 C</span></p>
+            <p>Staked: <span>0.0000 C</span></p>
+          </div>
+          <div>
+            <button>Copy</button>
+            <button>Send</button>
+          </div>
         </div>
       </div>
     </div>
   </main>
 
-  <!-- <footer>
-    <nav>
-      <a href="new-multisig.html">New Multisig</a>
-      <a href="multisig-accounts.html">Multisig Accounts</a>
-      <a class="selected" href="accounts.html">Accounts</a>
-      <a href="address-book.html">Address Book</a>
-      <a href="extrinsics.html">Extrinsics</a>
-    </nav>
-  </footer> -->
+  <footer>
+    <span>Secure Sign | Tenet Labs</span>
+  </footer>
 
   <script src="script.js"></script>
 </body>
