--- a/index.html
+++ b/index.html
@@ -32,13 +32,7 @@
   </main>
 
   <footer>
-    <nav>
-      <a href="new-multisig.html">New Multisig</a>
-      <a href="multisig-accounts.html">Multisig Accounts</a>
-      <a href="accounts.html">Accounts</a>
-      <a href="address-book.html">Address Book</a>
-      <a href="extrinsics.html">Extrinsics</a>
-    </nav>
+    <span>Secure Sign | Tenet Labs</span>
   </footer>
 
   <script src="script.js"></script>
