--- a/new-multisig.html
+++ b/new-multisig.html
@@ -40,71 +40,67 @@
   </header>
 
   <main class="new-multisig-page pagewidth">
-    <div class="input-group">
-      <label for="threshold">Threshold (2/0)</label>
-      <input type="text" id="threshold" placeholder="2">
-      <label for="multisig-name">Name</label>
-      <input type="text" id="multisig-name" placeholder="Multisig name">
-    </div>
+    <div class="content">
+      <div class="input-group">
+        <label for="threshold">Threshold (2/0)</label>
+        <input type="text" id="threshold" placeholder="2">
+        <label for="multisig-name">Name</label>
+        <input type="text" id="multisig-name" placeholder="Multisig name">
+      </div>
 
-    <div class="side-by-side-container">
-      <div class="side-item">
-        <h3>Available signatories (3)</h3>
-        <div class="side-item-content scrollable">
-          <div class="multisig-account">
-            <h4>Demo Account</h4>
-            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
-          </div>
-          <div class="multisig-account">
-            <h4>Test Account 1</h4>
-            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
-          </div>
-          <div class="multisig-account">
-            <h4>Test Account 2</h4>
-            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
-          </div>
-          <div class="multisig-account">
-            <h4>Test Account 3</h4>
-            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
-          </div>
-          <div class="multisig-account">
-            <h4>Test Account 4</h4>
-            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
-          </div>
-          <div class="multisig-account">
-            <h4>Test Account 5</h4>
-            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
-          </div>
-          <div class="multisig-account">
-            <h4>Test Account 6</h4>
-            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
-          </div>
-          <div class="multisig-account">
-            <h4>Test Account 7</h4>
-            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
-          </div>
-          <div class="multisig-account">
-            <h4>Test Account 8</h4>
-            <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+      <div class="side-by-side-container">
+        <div class="side-item">
+          <h3>Available signatories (3)</h3>
+          <div class="side-item-content scrollable">
+            <div class="multisig-account">
+              <h4>Demo Account</h4>
+              <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+            </div>
+            <div class="multisig-account">
+              <h4>Test Account 1</h4>
+              <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+            </div>
+            <div class="multisig-account">
+              <h4>Test Account 2</h4>
+              <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+            </div>
+            <div class="multisig-account">
+              <h4>Test Account 3</h4>
+              <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+            </div>
+            <div class="multisig-account">
+              <h4>Test Account 4</h4>
+              <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+            </div>
+            <div class="multisig-account">
+              <h4>Test Account 5</h4>
+              <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+            </div>
+            <div class="multisig-account">
+              <h4>Test Account 6</h4>
+              <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+            </div>
+            <div class="multisig-account">
+              <h4>Test Account 7</h4>
+              <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+            </div>
+            <div class="multisig-account">
+              <h4>Test Account 8</h4>
+              <p class="account-address" data-value="5GHjMgGkydmNStMAK6giDCjHB1pfHBh9N1N6ejTJ8C3YDqSP"></p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="side-item">
-        <h3>Selected signatories (0)</h3>
-        <div class="side-item-content scrollable"></div>
+        <div class="side-item">
+          <h3>Selected signatories (0)</h3>
+          <div class="side-item-content scrollable"></div>
+        </div>
       </div>
     </div>
   </main>
 
-  <!-- <footer>
-    <nav>
-      <a class="selected" href="new-multisig.html">New Multisig</a>
-      <a href="multisig-accounts.html">Multisig Accounts</a>
-      <a href="accounts.html">Accounts</a>
-      <a href="address-book.html">Address Book</a>
-      <a href="extrinsics.html">Extrinsics</a>
-    </nav>
-  </footer> -->
+  <footer>
+    <span>Secure Sign | Tenet Labs</span>
+  </footer>
 
   <script src="script.js"></script>
 </body>
